test/schemas/fail/invalid_base_types.sat
// ERROR: schemas/fail/invalid_base_types.sat(2): Struct base type is not a struct: derived : int32
struct derived : int32 {}

struct base {}
// ERROR: schemas/fail/invalid_base_types.sat(6): Enum base type is not an integer type: enum : base
enum enum : base {}
